--- a/server/ui/src/components/goals/GoalsPanel.module.css
+++ b/server/ui/src/components/goals/GoalsPanel.module.css
@@ -70,6 +70,11 @@
     font-size: 9.5px;
 }
 
+.tz {
+    font-size: 9.5px;
+    opacity: 0.6;
+}
+
 .status {
     text-transform: capitalize;
 }
